<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">EASY BOOK</string>
    <string name="skip">Skip</string>
    <string name="get_started">Get Started Now</string>
    <string name="onboarding_image">Onboarding Image</string>
    <string name="app_logo">App Logo</string>
    <string name="menu">Menu</string>
    <string name="search">Search</string>
    <string name="search_hint">Search books, authors...</string>
    <string name="book_of_week">Book of the week</string>
    <string name="recommended_for_you">Recommended for you</string>
    <string name="popular_books">Popular books</string>
    <string name="news">News</string>
    <string name="book_cover">Book Cover</string>
    <string name="read_now">Read Now</string>
    <string name="learn_more">Learn More</string>
    <string name="news_image">News Image</string>
    <string name="back">Back</string>
    <string name="about_the_book">About The Book</string>
    <string name="reviews">Reviews</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    
    <!-- Navigation -->
    <string name="nav_home">Home</string>
    <string name="nav_library">Library</string>
    <string name="nav_favorites">Favorites</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_mybooks">My Books</string>
    <string name="nav_downloads">Downloads</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about">About</string>
    <string name="nav_logout">Logout</string>
</resources>
